Updated .gitignore file to not remove images necessary for testing. Removed lodepng.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
+# Object Files
 *.o
+
+# Errant Images
 *.png
+*.jpg
+*.jpeg
+*.gif
+
+# Not images required for the test/main to run
+!test_resources/too_big.png
+!test_resources/image.png
+!image.png
+
+# Binaries
 triangles
 test
+
+# OS X Crap
 .DS_Store
 
