OAAT seems to be work :3 might make some additonal changes to its functionality later.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.jpeg
 *.gif
 
+# Directories
+output/
+
 # Not images required for the test/main to run
 !test_resources/too_big.png
 !test_resources/image.png
